Various preference changes do not mark the preferences as dirty (and related issues) #64679

Closed
opened 2019-05-16 03:30:49 +02:00 by Gavin Scott · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 64), branch: master (modified), commit date: 2019-05-15 23:47, hash: 02a7e57d9c

1] A number of settings accessible through the Preference editor do not mark the preferences as dirty for the purposes of auto saving preference settings at exit. List below.

2] Rather than solving all the individual "dirty detection" issues, perhaps it would simply make sense to always save preferences at exit regardless of whether we think they're dirty or not (as long as auto save is on). Because so many things are part of preferences (Quick Favorites etc. it seems likely that every non-trivial Blender session may do something that dirties the preferences so they're going to be saved most of the time anyway.

3] Minor bug/feature: If Auto Save Preferences is off, and we think the config is clean then the [Save Preferences] button is drawn greyed out, but clicking it still results in a save preferences being done. This is against expectations that a "disabled" button will do nothing when clicked. Also applies to the Revert to Saved option in the menu.

4] Maybe we should check to see if the config directory is writeable before trying to overwrite the config and give a friendlier message than you currently get as it makes a couple of attmpts (Windows example):

Writing userprefs: 'G:\bdev\build_windows_Release_x64_vc15_Release\bin\Release\2.80\config\userpref.blend' Unable to delete file
Error: Cannot change old file (file saved with @)
fail

Users might be running Blender off read-only media for one reason or another.

5] Here's the list of the things found so far that fail to flag the preferences as dirty:

  • File Paths: If you edit the path field manually then on enter the config is marked dirty. However, if you use the File Browser icon to select a new value, then the config is NOT marked dirty. This seems to apply generally to any file path preference, including path settings that are part of add-on settings in the Add-ons page (Blenderkit for example). Also the font selection fields under Interface, Text Rendering.

  • Changes to the list of excluded paths under Auto Run Python Scripts on the Save & Load page.

  • Changes to an existing Keymap entry (changing which key, modifiers, etc.

  • Changes to any of the parameters under "Walk" and "Gravity" under Fly & Walk in the Navigation page, including toggling Gravity on/off.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 64), branch: master (modified), commit date: 2019-05-15 23:47, hash: `02a7e57d9c` 1] A number of settings accessible through the Preference editor do not mark the preferences as dirty for the purposes of auto saving preference settings at exit. List below. 2] Rather than solving all the individual "dirty detection" issues, perhaps it would simply make sense to always save preferences at exit regardless of whether we think they're dirty or not (as long as auto save is on). Because so many things are part of preferences (Quick Favorites etc. it seems likely that every non-trivial Blender session may do something that dirties the preferences so they're going to be saved most of the time anyway. 3] Minor bug/feature: If Auto Save Preferences is off, and we think the config is clean then the [Save Preferences] button is drawn greyed out, but clicking it still results in a save preferences being done. This is against expectations that a "disabled" button will do nothing when clicked. Also applies to the Revert to Saved option in the menu. 4] Maybe we should check to see if the config directory is writeable before trying to overwrite the config and give a friendlier message than you currently get as it makes a couple of attmpts (Windows example): ``` Writing userprefs: 'G:\bdev\build_windows_Release_x64_vc15_Release\bin\Release\2.80\config\userpref.blend' Unable to delete file Error: Cannot change old file (file saved with @) fail ``` Users might be running Blender off read-only media for one reason or another. 5] Here's the list of the things found so far that fail to flag the preferences as dirty: - [ ] File Paths: If you edit the path field manually then on enter the config is marked dirty. However, if you use the File Browser icon to select a new value, then the config is NOT marked dirty. This seems to apply generally to any file path preference, including path settings that are part of add-on settings in the Add-ons page (Blenderkit for example). Also the font selection fields under Interface, Text Rendering. - [x] Changes to the list of excluded paths under Auto Run Python Scripts on the Save & Load page. - [x] Changes to an existing Keymap entry (changing which key, modifiers, etc. - [x] Changes to any of the parameters under "Walk" and "Gravity" under Fly & Walk in the Navigation page, including toggling Gravity on/off.
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott
Campbell Barton was assigned by Brecht Van Lommel 2019-05-21 11:25:54 +02:00

This issue was referenced by 8ec3b5b7c6

This issue was referenced by 8ec3b5b7c6d5db1fd8f98c0d54d1dc729ff19be2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64679
No description provided.