source/blender/makesrna/RNA_access.h
@@ -726,6 +726,7 @@ extern StructRNA RNA_View3DOverlay;
 extern StructRNA RNA_View3DShading;
 extern StructRNA RNA_ViewLayer;
 extern StructRNA RNA_VoronoiTexture;
+extern StructRNA RNA_WalkNavigation;
 extern StructRNA RNA_WarpModifier;
 extern StructRNA RNA_WaveModifier;
 extern StructRNA RNA_WeightedNormalModifier;
